fix miss commit

--- a/info_content/info_cont1.html
+++ b/info_content/info_cont1.html
@@ -1,34 +1,217 @@
-<div style="background:#fff">
-New South Wales lies on the east coast of Australia, between Queensland and Victoria. Sydney is Australia’s premier gateway, the State capital and Australia’s largest city, and is easily reached by frequent flights from Asia, Europe, North America and Oceania. NSW is also well serviced by a network of regional airlines, trains, buses and coach services. Sydney is the biggest, oldest and most cosmopolitan city in Australia - and one of the most vibrant and exciting cities on earth. Its sparkling harbour, dazzling beaches and sunny, Mediterranean climate are matched by an array of splendid museums and galleries, spirited nightlife, relaxed lifestyle and rich architectural heritage. Sydney is also one of the most culturally diverse cities on earth. With a population of 4.34 million (June 2007), the accents of Asia, Europe and the Middle East intermingle on its streets, restaurants and festival calendar. The surrounding regions within three hours’ drive from Sydney offer a world of astonishing natural attractions - wine regions, beaches, World Heritage national parks and spectacular coastal and country scenery. The Snowy Mountains is an inspiring destination for winter sports and summer hiking. Lord Howe Island a World Heritage-listed island, is a timeless, natural paradise. Quintessentially Australian settlements founded by gold miners, graziers and farmers and now attracting lovers of food and history anchor the Heart of Country, stretching across the sunny western plains from north to south. Farthest west is the Outback, rich with Aboriginal heritage and the magic of the desert. The North Coast provides a taste of classic Aussie surf culture, while the South Coast has more than 30 national parks, marine parks and reserves. There are many distinguished museums, libraries, galleries, performing arts companies and venues in New South Wales, providing a focal point for cultural activities. With a backdrop of stunning landscapes on offer, combined with the range of lifestyles that New South Wales nurtures, it's not surprising that so many have chosen to call this place home. From the bustling, modern city of Sydney with its magnificent harbour, coastline and National Park fringe, through to the picturesque heritage, agricultural and produce towns stretching inland towards the sparse, colourful desert region, there's truly something on offer for everyone. Just ask any local, who will, in the spirit of friendly rivalry with closest neighbours, proudly point out why their niche in New South Wales is the only place to be.
 
-    * - About NSW
-    * - Airlines
-    * - Cooking
-    * - Currency exchange
-    * - Emergency services - 000
-    * - Government
-    * - Jokes
-    * - Maps & Tracks
-    * - News / Traffic
-    * - Shopping centers
-    * - Sydney council events and information
-    * - Transportation
-    * - TV / Cinema Guide
-    * - Utilities
-    * - Wildlife
-    * - Banks / Credit Cards
-    * - Health (Insurances / Medical centers / Hospitals)
-    * - Kindergartens / Schools / University
-    * - Public holidays / Calendars
-    * - Statistic and Information
+<head>
+<style>
+<!--
+p
+	{margin-right:0cm;
+	margin-left:0cm;
+	font-size:12.0pt;
+	font-family:"Times New Roman";
+	}
+h2
+	{margin-right:0cm;
+	margin-left:0cm;
+	font-size:18.0pt;
+	font-family:"Times New Roman";
+	font-weight:bold}
+ p.MsoNormal
+	{mso-style-parent:"";
+	margin-bottom:.0001pt;
+	font-size:12.0pt;
+	font-family:"Times New Roman";
+	margin-left:0cm; margin-right:0cm; margin-top:0cm}
+-->
+</style>
+</head>
 
-    * Advertise With Us
-    * About Sydney
-    * FAQ
-    * Contact Us
-
-    * Privacy Policy
-    * Terms of Service
-
-
-</div>
+<hr size=4 width=100%>
+<h2><span style="font-family:Arial;color:red">History</span></h2>
+<p class="MsoNormal"><span style="font-family:Arial">The original inhabitants of 
+NSW,
+<a target="_blank" jQuery1266456862197="69" style="color: blue; text-decoration: underline; text-underline: single" href="http://www.daa.nsw.gov.au/publications/31.html">
+the Aboriginal peoples</a>, have lived in the area for more than 45,000 years 
+and many reminders of this period still exists today. In Sydney and the 
+surrounding regions alone there are more than 2,000 Aboriginal rock engraving 
+sites and many of Sydney's suburbs have Aboriginal names such as Woolloomooloo, 
+Parramatta and Yagoona.<br>
+&nbsp;</span></p>
+<p class="MsoNormal"><span style="font-family:Arial">European settlement began 
+in 1770 when
+<a target="_blank" jQuery1266456862197="67" style="color: blue; text-decoration: underline; text-underline: single" href="http://www.cultureandrecreation.gov.au/articles/australianhistory/">
+Captain James Cook</a> sailed into what is now called Botany Bay. Cook later 
+claimed a section of Australia's East Coast for Great Britain under the name of 
+New South Wales. The transportation of convicts which followed resulted in a 
+gritty, colourful history that can be seen around Sydney City's The Rocks 
+suburb.&nbsp; Sydney's population reached 1 million in 1925 and now has over 4.5 
+million people. The
+<a target="_blank" jQuery1266456862197="68" style="color: blue; text-decoration: underline; text-underline: single" href="http://www.parliament.nsw.gov.au/prod/web/common.nsf/key/HistoryDemocracy">
+colony became a state in 1901</a> after Australia was officially declared a 
+nation.<br>
+&nbsp;</span></p>
+<p class="MsoNormal"><span style="font-family:Arial">New South Wales lies on the 
+east coast of Australia, between Queensland and Victoria.
+<a style="color: blue; text-decoration: underline; text-underline: single" href="http://www.visitnsw.com/zone/Sydney.aspx">
+Sydney</a> is Australia's premier gateway, the State capital and Australia's 
+largest city, and is easily reached by
+<a style="color: blue; text-decoration: underline; text-underline: single" href="http://www.visitnsw.com/Travelling_to_Sydney_and_NSW_p2830.aspx">
+frequent flights</a> from Asia, Europe, North America and Oceania. NSW is also 
+well serviced by a network of regional airlines, trains, buses and coach 
+services. </span></p>
+<p class="MsoNormal"><span style="font-family:Arial">&nbsp;The two major landmarks of 
+Sydney's skyline --the Sydney Harbour Bridge, opened in 1932 and in 1973 Queen 
+Elizabeth II opened the Sydney Opera House which was added to the World Heritage 
+List in 2007.</span></p>
+<h2><span style="font-family:Arial;color:red">Regions of New South Wales</span></h2>
+<p><span style="font-family:Arial">The surrounding regions within three hours 
+drive from Sydney offer a world of astonishing natural attractions - wine 
+regions, beaches, World Heritage national parks and spectacular coastal and 
+country scenery.&nbsp; </span></p>
+<p><span style="font-family:Arial">The Snowy Mountains is an inspiring 
+destination for winter sports and summer hiking. &nbsp;Lord Howe Island a World 
+Heritage-listed island, is a timeless, natural paradise.</span></p>
+<p><span style="font-family:Arial">Quintessentially Australian settlements 
+founded by gold miners, graziers and farmers and now attracting lovers of food 
+and history anchor the Heart of Country, stretching across the sunny western 
+plains from north to south. </span></p>
+<p><span style="font-family:Arial">Farthest west is the Outback, rich with 
+Aboriginal heritage and the magic of the desert. The North Coast provides a 
+taste of classic Aussie surf culture, while the South Coast has more than 30 
+national parks, marine parks and reserves.</span></p>
+<h2><span style="font-family:Arial;color:red">Culture in NSW</span></h2>
+<p><span style="font-family:Arial">There are many distinguished museums, 
+libraries, galleries, performing arts companies and venues in New South Wales, 
+providing a focal point for cultural activities. Beyond the large institutions 
+is a thriving network of independent locally-run spaces that encourage regional 
+or young and emerging artists. Similarly, many actors and musicians get their 
+start in the local theatres and bars, or short film and television productions, 
+before going on to achieve international acclaim. Festivals are a major 
+highlight, with plenty of film festivals staggered throughout the year as well 
+as vibrant music and arts festivals in the summer time.</span></p>
+<h2><span style="font-family:Arial;
+  color:red">Sydney</span><span style="font-family:Arial;
+color:red">&nbsp;</span></h2>
+<p><span style="font-family:Arial">Sydney is the biggest, oldest and most 
+cosmopolitan city in Australia - and one of the most vibrant and exciting cities 
+on earth. Its sparkling harbour, dazzling beaches and sunny, Mediterranean 
+climate are matched by an array of splendid museums and galleries, spirited 
+nightlife, relaxed lifestyle and rich architectural heritage.</span></p>
+<p><span style="font-family:Arial">Sydney is also one of the most culturally 
+diverse cities on earth. With a population of 4.34 million (June 2007), the 
+accents of Asia, Europe and the Middle East intermingle on its streets, 
+restaurants and festival calendar.&nbsp;</span></p>
+<h2><span style="font-family:Arial;color:red">Places in Sydney</span></h2>
+<p><span style="font-family:Arial">With a backdrop of stunning landscapes on 
+offer, combined with the range of lifestyles that New South Wales nurtures, it's 
+not surprising that so many have chosen to call this place home. From the 
+bustling, modern city of Sydney with its magnificent harbour, coastline and 
+National Park fringe, through to the picturesque heritage, agricultural and 
+produce towns stretching inland towards the sparse, colourful desert region, 
+there's truly something on offer for everyone. Just ask any local, who will, in 
+the spirit of friendly rivalry with closest neighbours, proudly point out why 
+their niche in New South Wales is the only place to be. </span></p>
+<p><span style="font-family:Arial">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="2"><span style="color: blue; text-underline: single">
+<span style="color: blue; text-underline: single; font-family:Arial">
+<a href="http://www.sydneyoperahouse.com/?gclid=CJ7ZzK_e-58CFdAvpAodiBkRkQ">
+Opera house</a>&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<span style="color: blue; text-underline: single; font-family:Arial">
+<a href="http://en.wikipedia.org/wiki/Sydney_Harbour_Bridge">
+Harbour Bridge</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="color: blue; text-underline: single; font-family:Arial" href="http://www.spot101.com/Activities/Sydney/NSW/Australia/Aus28">
+Activities in Sydney</a></span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<span style="color: blue; text-underline: single; font-family:Arial">
+<a href="http://sydneytower.myfun.com.au/">
+Centre Point</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="color: blue; text-underline: single; font-family:Arial" href="http://www.darlingharbour.com/">
+Darling Harbour</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="color: blue; text-underline: single; font-family:Arial" href="http://www.spot101.com/Restaurants/Sydney/NSW/Australia/Aus28">
+Restaurants in Sydney</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="color: blue; text-underline: single; font-family:Arial" href="http://www.bondivillage.com/">
+Bondi Beach</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a style="color: blue; text-underline: single; font-family:Arial" href="http://www.manlyaustralia.com.au/">
+Manly Beach</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events in Sydney </span> 
+</span></font> </span></p>
+<h2><span style="font-family:Arial;color:red">Climate</span></h2>
+<p><span style="font-family:Arial">Sydney has a temperate climate with warm 
+summers and cool winters, and rainfall spread throughout the year. The weather 
+is moderated by proximity to the ocean, and more extreme temperatures are 
+recorded in the inland western suburbs.<br>
+<br>
+In winter, temperatures rarely drop below 5C (41F) in coastal areas. The coldest 
+month is July, with an average range of 8.0--16.2C (46--61F). <br>
+<br>
+The average annual rainfall, with moderate to low variability, is 1,217 mm (48 
+in), falling on an average 138 days a year. Snowfall was last reported in the 
+Sydney City area in 1836<br>
+Bondi Beach in Sydney's east. Sydney's warm weather in summer makes its beaches 
+very popular. The city is not affected by cyclones. The El Nino Southern 
+Oscillation plays an important role in determining Sydney's weather patterns: 
+drought and bushfire on the one hand, and storms and flooding on the other, 
+associated with the opposite phases of the oscillation. </span></p>
+<p><span style="font-family:Arial">Many areas of the city bordering bushland 
+have experienced bushfires, notably in 1994 and 2001/02 ----- these tend to 
+occur during the spring and summer. The city is also prone to severe hail storms 
+and wind storms and flash flooding from rain caused by East Coast Lows (a low 
+pressure depression which can bring significant damage by heavy rain, cyclonic 
+winds and huge swells).<br>
+&nbsp;</span></p>
+<h2><span style="font-family:Arial;color:red">Essential Information</span></h2>
+<p><span style="font-family:Arial">The official language of Australia is 
+English.&nbsp; Sydney's subtropical climate is one of its biggest assets, as it 
+enjoys a mild winter and has more than 340 sunny days per year.&nbsp; Average maximum 
+temperatures range from 16*C in Winter to 26*C in Summer.&nbsp; Average relative 
+humidity varies from 60% to 71%.&nbsp;<br>
+<br>
+Sydney experiences Spring from September through to November, Summer from 
+December to February, Autumn from March to May and Winter from June to August.
+<br>
+<br>
+&nbsp;The time zone in Sydney is GMT+10.&nbsp; During daylight savings time (from end 
+October until end March), clocks go forward by one hour. &nbsp;<br>
+<br>
+The population of Sydney is around 4.5 million and is very much a multicultural 
+society. In Sydney you will have little difficulty finding an appropriate place 
+of worship. The main religion is Christianity with the three largest 
+denominations being the Anglican, Roman Catholic and Uniting Churches. &nbsp;Other 
+major religions include Judaism, Islam, Buddhism, Taoism and Hinduism. Freedom 
+of religion is guaranteed by law in Australia.</span></p>
+<p><span style="font-family: Arial">
+<a href="http://australia.gov.au/about-australia/our-country/telephone-country-and-area-codes">
+Australians international dialling</a> code prefix is 61. Within Australia local 
+lan-lines use 8-digit local phone numbers preceded by a 2-digit STD area code.</span></p>
+<ul>
+	<li><span style="font-family: Arial">02 Central East Region (New South 
+	Wales, Australian Capital Territory (Canberra)</span></li>
+	<li><span style="font-family: Arial">03 South East Region (Victoria, 
+	Tasmania)</span></li>
+	<li><span style="font-family: Arial">04 Mobile Telephones (Australia-wide)</span></li>
+	<li><span style="font-family: Arial">07 North East Region (Queensland)</span></li>
+	<li><span style="font-family: Arial">08 Central and West Region (Western 
+	Australia, South Australia and Northern Territory)</span></li>
+</ul>
+<p><span style="font-family:Arial"><br><br>Australia is a Commonwealth country and as such people drive on the left hand 
+side of the road. <br><br>The currency used in Australia is the Australian Dollar (AUD).&nbsp; There are 100 
+cents to one Australian Dollar. There is no limit to the amount of foreign or 
+Australian currency you can bring in or take out of the country, but amounts of 
+more than $10,000 either way must be declared to Customs. <br><br>A 10% Goods and Services Tax (GST) is added to many items for sale in Australia, 
+and is included in the price displayed.&nbsp; For visitors and Australians travelling 
+overseas, GST and the Wine Equalisation Tax are refundable for goods over $300 
+(per store), packed in your hand luggage and purchased within 30 days of leaving 
+Australia. <br><br>Banks are open Monday to Friday (and some major banks are now open limited hours 
+on Saturdays).&nbsp; There is foreign exchange offices located throughout the city.
+</span></p>
+<h2><span style="font-family:Arial;color:red">Phoning Home</span></h2>
+<p class="MsoNormal"><span style="font-size:11.0pt;font-family:Arial">T</span><span style="font-family:
+Arial">here are many payphones across Sydney that accepts coins and phone 
+cards.&nbsp; Local calls cost 50 cents. International calling cards, available at 
+newsagencies, are the cheapest way to call home. &nbsp;</span></p>
+<p class="MsoNormal"><span style="font-family:Arial">An economical way to use 
+your overseas mobile phone is to purchase a starter pack with includes a local 
+SIM card and phone number. All calls are prepaid and there is no contract to 
+sign up to. These packs are available from mobile phone stores, at newsagencies, 
+post offices and supermarkets. </span></p>
+<p class="MsoNormal"><font face="Arial">You can make international phone calls 
+by using the destination country code prefix. To find this prefix
+<a href="http://www.whitepages.com.au/wp/info/dialling-codes">click here</a>.</font></p>
+<p class="MsoNormal">&nbsp;</p>
